--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <<link rel="manifest" href="manifest.json">
-  <title></title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="manifest" href="manifest.json">
+
+  <title>Alenya</title>
 </head>
 
 <body>
   
+  <nav class="nav">t</nav>
   
   <script>
   if ('serviceWorker' in navigator) {
