--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
   
-  <nav class="nav">t</nav>
+  <nav class="nav">
+    <div class="heading1">dc</div>
+  </nav>
   
   <script>
   if ('serviceWorker' in navigator) {
