--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/Lumina/sw.js')
+    navigator.serviceWorker.register('/Alenya/sw.js')
       .then(() => console.log("Service Worker registered"))
       .catch(err => console.error("SW registration failed:", err));
   }
